--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.1.2",
     "luxon": "^1.19.3",
     "query-string": "^6.8.3",
+    "video.js": "^7.6.5",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/luxon": "^1.15.2",
+    "@types/video.js": "^7.2.15",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.0",
