--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clappr": "^0.3.11",
     "core-js": "^3.1.2",
     "luxon": "^1.19.3",
+    "openplayerjs": "^1.12.1",
     "query-string": "^6.8.3",
     "video.js": "^7.6.5",
     "vue": "^2.6.10",
