--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "openplayerjs": "^1.12.1",
     "query-string": "^6.8.3",
     "video.js": "^7.6.5",
+    "videojs-playlist": "^4.3.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
